--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "dependencies": {
         "framer-motion": "^12.18.1",
         "react-icons": "^5.5.0",
-        "react-intersection-observer": "^9.16.0"
+        "react-intersection-observer": "^9.16.0",
+        "recharts": "^3.0.2",
+        "sonner": "^2.0.5"
     }
 }
