--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,11 @@
 /node_modules
 # /public/build
 # /public/hot
-# /public/storage
+/public/storage
 /storage/*.key
 # /vendor
-# .env
+.env
+# .git
 .env.backup
 .env.production
 Homestead.json
