--- a/.env
+++ b/.env
@@ -1,8 +1,10 @@
-APP_NAME="Santripreneur"
+APP_NAME="Santripreneur BAZNAS"
 APP_ENV=local
 APP_KEY=base64:avIQ8qyRdKvLh1ql2PKNlIRsQJqwOKb8sPyKOWpB5zg=
 APP_DEBUG=true
-APP_URL=0.0.0.0
+
+APP_URL=https://santripreneurbaznas.id/
+# APP_URL=0.0.0.0
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
@@ -14,22 +16,13 @@ LOG_LEVEL=debug
 # DB_DATABASE=baznas-santripreuner
 # DB_USERNAME=root
 # DB_PASSWORD=
+
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_DATABASE=u610165874_santripreneur
-DB_USERNAME=u610165874_santripreneur
-DB_PASSWORD=Og#QouT8
-
-# DB_CONNECTION=pgsql
-# DB_HOST=aws-0-ap-southeast-1.pooler.supabase.com
-# DB_PORT=6543
-# DB_DATABASE=postgres
-# DB_USERNAME=postgres.kbqazywvmdwtypsbmmvq
-# DB_PASSWORD=Rhaihan123!1
-# DB_SSLMODE=require
-
-
+DB_DATABASE=u610165874_santri
+DB_USERNAME=u610165874_preneur
+DB_PASSWORD=9oE@193t@(Rf>`xzZqQi
 
 
 
@@ -47,13 +40,13 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailpit
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS="hello@example.com"
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.gmail.com
+MAIL_PORT=465
+MAIL_USERNAME=santripreneurbaznas.id@gmail.com
+MAIL_PASSWORD=yfzrtfdapzkcvtfv
+MAIL_ENCRYPTION=ssl
+MAIL_FROM_ADDRESS="santripreneurbaznas.id@gmail.com"
+MAIL_FROM_NAME="Santripreuner BAZNAS"
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
