--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,15 @@
 # /public/build
 # /public/hot
 /public/storage
+/public/favicons
+/public/files
+/public/images
+/public/.htaccess
+/public/favicon.ico
+/public/index.php
+
 /storage/*.key
+
 # /vendor
 .env
 # .git
