--- a/.env
+++ b/.env
@@ -3,26 +3,26 @@ APP_ENV=local
 APP_KEY=base64:avIQ8qyRdKvLh1ql2PKNlIRsQJqwOKb8sPyKOWpB5zg=
 APP_DEBUG=true
 
-# APP_URL=https://santripreneurbaznas.id/
-APP_URL=0.0.0.01
+APP_URL=https://santripreneurbaznas.id/
+# APP_URL=0.0.0.01
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=baznas-santripreuner
-DB_USERNAME=root
-DB_PASSWORD=
-
 # DB_CONNECTION=mysql
-# DB_HOST=localhost
+# DB_HOST=127.0.0.1
 # DB_PORT=3306
-# DB_DATABASE=u610165874_santri
-# DB_USERNAME=u610165874_preneur
-# DB_PASSWORD=9oE@193t@(Rf>`xzZqQi
+# DB_DATABASE=baznas-santripreuner
+# DB_USERNAME=root
+# DB_PASSWORD=
+
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_DATABASE=u610165874_santri
+DB_USERNAME=u610165874_preneur
+DB_PASSWORD=9oE@193t@(Rf>`xzZqQi
 
 
 
